--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "api"
   ],
   "author": "Tejsingh Dhaosriya",
-  "license": "ISC",
+  "license": "GPL",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.5",
     "morgan": "^1.10.0",
-    "mssql": "^6.2.1",
+    "mysql": "^2.18.1",
     "objection": "^2.2.3",
     "parse-error": "^0.2.0"
   }
