--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
   "author": "Tejsingh Dhaosriya",
   "license": "GPL",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.5",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "objection": "^2.2.3",
-    "parse-error": "^0.2.0"
+    "parse-error": "^0.2.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   }
 }
